fix: fixing scorecard
